@@ -1,3 +1,7 @@
+2008-01-25  Jonh Wendell <jwendell@gnome.org>
+
+	* src/vinagre-notebook.c: Adjust the size of tabs.
+
 2008-01-24  Jonh Wendell <jwendell@gnome.org>
 
 	* data/vinagre.desktop.in.in: Removed 'OnlyShowIn' line (LP: #185707)
